# pyper

./: .gitignore  LICENSE  README.md  pyproject.toml
pyper/: __init__.py
pyper/endpoint/: __init__.py  provider.py
pyper/transform/: __init__.py
