[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyper"
authors = [{name = "Justin Singh-Mohudpur", email = "justin@justinsingh.me"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "duckdb",
    "pydantic"
]

[project.optional-dependencies]
prql = ["pyprql >=0.6.2"]
polars = ["polars"]
arrow = ["pyarrow"]
dev = [
    "autopep8"
]